--- a/dreamtracker-frontend/package.json
+++ b/dreamtracker-frontend/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.5",
     "tailwindcss": "^4.0.2"
   },
   "devDependencies": {
