--- a/dreamtracker-backend/composer.json
+++ b/dreamtracker-backend/composer.json
@@ -7,7 +7,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "kreait/laravel-firebase": "^5.10",
         "laravel/framework": "^11.31",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "symfony/translation": "^7.2"
     },
